--- a/public/views/index.html
+++ b/public/views/index.html
@@ -13,10 +13,11 @@
             <div class="fadeIn first">
                 <img class="mb-4" src="../images/cds_logo_80x126.png" alt="" width="80" height="100">
             </div>
-            <form>
-                <input type="text" id="login" class="fadeIn second" name="Usuário" placeholder="login">
-                <input type="text" id="password" class="fadeIn third" name="Senha" placeholder="password">
-                <input type="submit" class="fadeIn fourth" value="Log In">
+            <!-- <form action="/realizarLogin" method="POST"> -->
+            <form method="POST">
+                <input type="text" id="usuario" class="fadeIn second" name="usuario" placeholder="Usuario" required>
+                <input type="text" id="senha" class="fadeIn third" name="senha" placeholder="password" required>
+                <input type="submit" class="fadeIn fourth" value="Entrar" id="entrarBtn">
             </form>
             <div id="formFooter">
                 <a class="underlineHover" href="#">Esqueceu a senha?</a>
@@ -25,5 +26,7 @@
     </div>
     <script src="../lib/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script language="javascript" src="js/bootstrap.min.js"></script>
+    <script language="javascript" src="axios.min.js"></script>
+    <script language="javascript" src="../javascripts/login.js"></script>
   </body>
 </html>
