Começa a utilizar o mongoDB como banco de dados e criptografa a senha do usuário

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,6 +20,8 @@
                 <input type="submit" class="fadeIn fourth" value="Entrar" id="entrarBtn">
             </form>
             <div id="formFooter">
+                <a class="underlineHover" href="/login/cadastrar">Cadastrar Novo Usuário</a>
+                <br>
                 <a class="underlineHover" href="#">Esqueceu a senha?</a>
             </div>
         </div>
