--- a/views/inicio.ejs
+++ b/views/inicio.ejs
@@ -1,5 +1,5 @@
 <html>
-        <link rel="stylesheet" href="/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
     <body>
         <div class="container-fluid">
             <div class="row">
@@ -28,12 +28,43 @@
                         </div>
                 </div>
                 <div class="col">
-                        <nav class="navbar navbar-light bg-light">
-                            <div class="form-group mb-2">
-                                <input type="email" class="form-control form-control-lg" id="busca" aria-describedby="emailHelp" placeholder="Nome ou Identidade">
-                            </div>
-                            <button type="submit" class="btn btn-success" data-toggle="modal" data-target="#modalExemplo">Cadastrar novo Visitante</button>
-                        </nav>
+                    <nav class="navbar navbar-light bg-light">
+                        <div class="form-group mb-2">
+                            <input type="email" class="form-control form-control-lg" id="busca" aria-describedby="emailHelp" placeholder="Nome ou Identidade">
+                        </div>
+                        <button type="submit" class="btn btn-success" data-toggle="modal" data-target="#modalExemplo">Cadastrar novo Visitante</button>
+                    </nav>
+
+                    <table class="table table-striped table-hover">
+                        <thead>
+                            <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Usuário</th>
+                            <th scope="col">Senha</th>
+                            <th scope="col">Ação</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <% if(usuarios) { %>
+                                <% for(var i = 0; i < usuarios.length; i++) { %>
+                                    <tr>
+                                        <th scope="row">
+                                            <%= usuarios[i]._id %>
+                                        </<th>
+                                        <td>
+                                            <%= usuarios[i].usuario %>
+                                        </td>
+                                        <td>
+                                            <%= usuarios[i].senha %>
+                                        </td>
+                                        <td>
+                                            <button type="button" class="btn btn-danger">Finalizar visita</button>
+                                        </td>
+                                    </tr>
+                                <% } %>
+                            <% } %>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>        
@@ -48,45 +79,32 @@
                   </button>
                 </div>
                 <div class="modal-body">
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <label for="usuario">Usuario</label>
-                            <input type="text" class="form-control" id="usuario" placeholder="usuario" name="usuario">
+                    <form action="/login/salvar" method="POST">
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label for="usuario">Usuario</label>
+                                <input type="text" class="form-control" id="usuario" placeholder="usuario" name="usuario">
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label for="inputPassword4">Senha</label>
+                                <input type="password" class="form-control" id="inputPassword4" placeholder="Senha" name="senha">
+                            </div>
                         </div>
-                        <div class="form-group col-md-6">
-                            <label for="inputPassword4">Senha</label>
-                            <input type="password" class="form-control" id="inputPassword4" placeholder="Senha" name="senha">
+                        <div class="form-group">
+                            <label for="inputAddress">Endereço</label>
+                            <input type="text" class="form-control" id="inputAddress" placeholder="Rua dos Bobos, nº 0">
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="inputAddress">Endereço</label>
-                        <input type="text" class="form-control" id="inputAddress" placeholder="Rua dos Bobos, nº 0">
-                    </div>
+                    
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-                  <button type="button" class="btn btn-primary">Salvar mudanças</button>
+                  <button type="submit" class="btn btn-primary">Salvar mudanças</button>
                 </div>
+            </form>
               </div>
             </div>
           </div>
-
-        <!-- <% if(validation) { %>
-            <ul>
-                <% for(var i = 0; i < validation.length; i++) { %>
-                    <li>
-                        <%= validation[i].msg %>
-                    </li>
-                <% } %>
-            </ul>
-        <% } %>
-        <form action="/login/salvar" method="POST">
-            Usuario: <input type="text" name="usuario" id="usuario">
-            Senha: <input type="password" name="senha" id="senha">
-            <input type="submit" value="Salvar">
-        </form> -->
     </body>
     <script src="../lib/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>    <script language="javascript" src="/js/bootstrap.min.js"></script>
 </html>
